# robotic_kachel_robot

./: README.md
workspace/: .gitignore
workspace/devel/: .catkin  .rosinstall
workspace/devel/lib/pkgconfig/: dirac_description.pc
workspace/devel/share/dirac_description/cmake/: dirac_descriptionConfig.cmake
workspace/src/dirac_description/: CMakeLists.txt  package.xml
workspace/src/dirac_description/launch/: simulation.launch
workspace/src/dirac_description/rviz/: dirac.rviz
workspace/src/dirac_description/src/: dirac_control.cpp  lidar_listener.cpp  util.h
workspace/src/dirac_description/src/a_star/: a_star.cpp  a_star.h  node.cpp  node.h  test_a_star.cpp
workspace/src/dirac_description/src/a_star/heap/: heap.cpp  heap.h
workspace/src/dirac_description/urdf/: dirac.gazebo  dirac.urdf
workspace/src/dirac_description/worlds/: world.sdf
worlds/: world.sdf
