<?xml version="1.0"?>
<package format="2">
  <name>dirac_description</name>
  <version>0.1.0</version>
  <description>The dirac_description package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
